--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,5 +1,5 @@
 /**
- * YouTube Continue Watching - Popup Styles
+ * YouTube Uninterrupted - Popup Styles
  * 
  * Modern, clean design for the extension popup
  */
